# ACGC-Vita-Port

./: .gitignore
pc/include/: pc_gx_backend.h  pc_gx_internal.h  pc_platform.h  pc_settings.h
pc/src/: pc_assets.c  pc_audio.c  pc_card.c  pc_disc.c  pc_dvd.c  pc_gx.c  pc_gx_tev.c  pc_gx_texture.c  pc_keybindings.c  pc_m_card.c  pc_os.c  pc_pad.c  pc_settings.c  pc_vi.c
tools/: build_vita_texcache.py  pvrtc_encode.c  pvrtc_encoder.h
vita/: CMakeLists.txt  README.md  build.sh  build_vita.sh  deploy.sh  full_rebuild.sh  rebuild_vitagl.sh
vita/include/: vita_banner.h  vita_frame.h  vita_gx_cmdbuf.h  vita_platform.h  vita_shared.h  vita_texpack.h  vita_uniform.h  vita_vtc.h
vita/sce_sys/livearea/contents/: template.xml
vita/shaders/: cfg0_f.cg  cfg10_f.cg  cfg11_f.cg  cfg12_f.cg  cfg13_f.cg  cfg14_f.cg  cfg15_f.cg  cfg16_f.cg  cfg17_f.cg  cfg18_f.cg  cfg19_f.cg  cfg20_f.cg  cfg21_f.cg  cfg22_f.cg  cfg23_f.cg  cfg24_f.cg  cfg25_f.cg  cfg26_f.cg  cfg27_f.cg  cfg28_f.cg  cfg29_f.cg  cfg2_f.cg  cfg30_f.cg  cfg31_f.cg  cfg32_f.cg  cfg33_f.cg  cfg34_f.cg  cfg35_f.cg  cfg36_f.cg  cfg37_f.cg  cfg38_f.cg  cfg39_f.cg  cfg3_f.cg  cfg4_f.cg  cfg5_f.cg  cfg6_f.cg  cfg7_f.cg  cfg8_f.cg  cfg9_f.cg  compile_new_shaders.sh  (+6 more)
vita/src/: vita_banner.c  vita_frame.c  vita_gx_cmdbuf.c  vita_gx_compat.c  vita_input.c  vita_main.c  vita_platform.c  vita_texpack.c  vita_vtc.c
